--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
+<!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
-    
+    <nav></nav>
+    <div class="container">
+      <section class="background-img">
+        <article>
+
+        </article>
+      </section>
+    </div>
+    <main></main>
   </body>
   <script type="text/javascript" src="main.js"></script>
 </html>
