Adds text and button on nav

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
-    <nav></nav>
+    <nav class='nav'>
+      <h3>What's for Dinner?</h3>
+      <button>Add A Recipe</button>
+    </nav>
     <div class="container">
       <section class="background-img">
         <article>
