Adds completed nav bar

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>What's For Dinner?</title>
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav class='nav'>
-      <h3>What's for Dinner?</h3>
-      <button>Add A Recipe</button>
+      <h3 class="title">What's for Dinner?</h3>
+      <button class="add-recipe-btn">ADD A RECIPE</button>
     </nav>
     <div class="container">
       <section class="background-img">
