Adds meal box and box for future image.

--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>What's For Dinner?</title>
-    <link rel="stylesheet" href="./styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <nav class='nav'>
-      <h3 class="title">What's for Dinner?</h3>
-      <button class="add-recipe-btn">ADD A RECIPE</button>
-    </nav>
-    <div class="container">
-      <section class="background-img">
-        <article>
 
-        </article>
-      </section>
-    </div>
-    <main></main>
-  </body>
-  <script type="text/javascript" src="main.js"></script>
+<head>
+  <title>What's For Dinner?</title>
+  <link rel="stylesheet" href="./styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <nav class='nav'>
+    <h3 class="title">What's for Dinner?</h3>
+    <button class="add-recipe-btn">ADD A RECIPE</button>
+  </nav>
+  <section class="background-img">
+    <article class="parent1">
+      <div class="box">
+        <h3>What are you looking for?</h3>
+          <ul>
+            <input type="radio" id="side" value="side"><label for="side">Side</label>
+          </ul>
+      </div>
+      <div class="box">This will be image</div>
+    </article>
+  </section>
+  <main></main>
+</body>
+<script type="text/javascript" src="main.js"></script>
+
 </html>
