--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>What's For Dinner?</title>
   <link rel="stylesheet" href="./styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
-
 <body>
   <nav class='nav'>
     <h3 class="title">What's for Dinner?</h3>
@@ -16,16 +14,16 @@
       <div class="box">
         <h3>What are you looking for?</h3>
           <div class="radio-btn">
-            <input type="radio" id="side" value="side"><label for="side">Side</label>
+            <input type="radio" id="side" name="btn"><label for="side">Side</label>
           </div>
           <div class="radio-btn">
-            <input type="radio" id="Main Dish" value="Main Dish"><label for="Main Dish">Main Dish</label>  
+            <input type="radio" id="Main Dish" name="btn"><label for="Main Dish">Main Dish</label>  
           </div>
           <div class="radio-btn">
-            <input type="radio" id="Dessert" value="Dessert"><label for="Dessert">Dessert</label>  
+            <input type="radio" id="Dessert" name="btn"><label for="Dessert">Dessert</label>  
           </div>
           <div class="radio-btn">
-            <input type="radio" id="Entire Meal" value="Entire Meal"><label for="Entire Meal">Entire Meal</label>  
+            <input type="radio" id="Entire Meal" name="btn"><label for="Entire Meal">Entire Meal</label>  
           </div>
           <button class="lets-cook-btn">LET'S COOK!</button>
       </div>
@@ -34,5 +32,4 @@
     </section>
 </body>
 <script type="text/javascript" src="main.js"></script>
-
 </html>
