Adds completed UI - radio btns, lets cook btn, svg image

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <input type="radio" id="side" name="btn"><label for="side">Side</label>
           </div>
           <div class="radio-btn">
-            <input type="radio" id="Main Dish" name="btn"><label for="Main Dish">Main Dish</label>  
+            <input type="radio" id="Main-Dish" name="btn"><label for="Main-Dish">Main Dish</label>  
           </div>
           <div class="radio-btn">
             <input type="radio" id="Dessert" name="btn"><label for="Dessert">Dessert</label>  
           </div>
           <div class="radio-btn">
-            <input type="radio" id="Entire Meal" name="btn"><label for="Entire Meal">Entire Meal</label>  
+            <input type="radio" id="Entire-Meal" name="btn"><label for="Entire-Meal">Entire Meal</label>  
           </div>
           <button class="lets-cook-btn">LET'S COOK!</button>
       </div>
