Adds value's to radion btns and progress on querySelectors

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
       <div class="box">
         <h3>What are you looking for?</h3>
           <div class="radio-btn">
-            <input type="radio" id="side" name="btn"><label for="side">Side</label>
+            <input type="radio" id="side" value="Side" name="btn"><label for="side">Side</label>
           </div>
           <div class="radio-btn">
-            <input type="radio" id="Main Dish" name="btn"><label for="Main Dish">Main Dish</label>  
+            <input type="radio" id="Main Dish" value="Main Dish" name="btn"><label for="Main Dish">Main Dish</label>  
           </div>
           <div class="radio-btn">
-            <input type="radio" id="Dessert" name="btn"><label for="Dessert">Dessert</label>  
+            <input type="radio" id="Dessert" value="Dessert" name="btn"><label for="Dessert">Dessert</label>  
           </div>
           <div class="radio-btn">
-            <input type="radio" id="Entire Meal" name="btn"><label for="Entire Meal">Entire Meal</label>  
+            <input type="radio" id="Entire Meal" value="Entire Meal" name="btn"><label for="Entire Meal">Entire Meal</label>  
           </div>
           <button class="lets-cook-btn">LET'S COOK!</button>
       </div>
