--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <button class="lets-cook-btn">LET'S COOK!</button>
       </div>
       <div class="box" id="pot-img">
+        <p id="output"></p>
       </div>
     </section>
 </body>
