Adds functioning side btn and lets cook btn when clicked pot disapears and random side shows.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
           </div>
           <button class="lets-cook-btn">LET'S COOK!</button>
       </div>
-      <div class="box" id="pot-img">
-        <p id="output"></p>
+      <div class="box">
+        <div id="pot-img">
+          <img src="/Users/nate/Mod_1/whats-for-dinner/assets/cookpot.svg" alt="Image of cooking pot">
+        </div>
+        <div class="you-should-make hide">
+          <p id="output">You should make:</p>
+          <p id="array-output">This will be recipe to make</p>
+        </div>
       </div>
     </section>
 </body>
