Adds completed readme,refactored code and finished project.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <nav class='nav'>
       <h3 class="title">What's for Dinner?</h3>
-      <button class="add-recipe-btn">ADD A RECIPE</button>
+      <!-- <button class="add-recipe-btn">ADD A RECIPE</button> -->
     </nav>
       <section class="parent1">
         <div class="box">
